2006-07-30  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab.c: (first_row), (baobab_init):
	Commenting code and adding an assert

2006-07-30  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab.c: (is_excluded_dir), (baobab_init):
	Avoid exclusion of root dir from scanning and
	from manual gconf entry (#348960)
	
2006-07-30  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab.c: (main):
	Trapping div by zero error when no mountpoints
	are detected.

2006-07-30  Fabio Marzocca  <thesaltydog@gmail.com>

	* data/baobab.desktop.in.in:
	* data/baobab.glade:
	Using standard American English in app name
	(#349191)

2006-07-29  Fabio Marzocca  <thesaltydog@gmail.com>

	* pixmaps/baobab.png:
	* pixmaps/baobab.xpm:
	Changed application icon (#348663)

2006-07-27  Fabio Marzocca  <thesaltydog@gmail.com>

	* data/baobab.desktop.in.in: 
        removed baobab from desktop appname
	(#348664 reported by Vincent Untz)

2006-07-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/baobab.desktop.in.in: Add GenericName key to the
	desktop file. (#348363, reported by Matthias Clasen,
	patch by Ray Strode)

2006-07-17  Paolo Borelli  <pborelli@katamail.com>

	* src/callbacks.c
	* src/baobab-treeview.c:
	* src/baobab-tree-map.c:

	Fix compilation with gcc 2.95 (Patch by Jens Granseuer)

2006-05-09  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-utils.c: (popupmenu_list_search):
	* src/callbacks.c: (scan_folder_cb):
	* src/callbacks.h:

	Added new menu item in list/search window popupmenu to start
        scanning a folder directly from the list/search window

2006-05-01  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-treeview.c: (on_tv_button_press):

2006-04-28  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-treeview.c: (on_tv_button_press): fixed bug

2006-04-26  Fabio Marzocca  <thesaltydog@gmail.com>

	* help/C/baobab.xml: fixed figures
	* src/callbacks.c: (trash_dir_cb): fixed monitor logic

2006-04-21  Paolo Borelli  <pborelli@katamail.com>
