@@ -1,3 +1,10 @@
+2006-08-04  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-utils.c: (baobab_get_filesystem), (show_bars):
+
+	Adding percentage bar to folders belonging to 
+	not fully-scanned branches (patch by Alejandro Garcia Castro)
+ 
 2006-07-30  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab.c: (first_row), (baobab_init):
